--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ PASSWORD= DB password
 DATABASE= DB name
 HOST= host -ip-
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+JWT_SECRET="random secret for json web token"
